<resources>
    <string name="app_name">Blog</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="post_title">Post Title...</string>
    <string name="post_description">Post Description</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last Name</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Login Logo Page</string>
    <string name="login_btn_text">Login To Account</string>
    <string name="login_reg_btn_text">Need A New Account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_pass">Password...</string>
    <string name="reg_create_account_btn">Create new Account</string>
    <string name="reg_already_account">Already have an Account?</string>
    <string name="reg_confirm_pass">Confirm Password...</string>
    <string name="title_activity_retailer">Retailer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_phone">Your device does not support phone call feature</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="category_list">Choose Category</string>
    <string name="search">Search Menu</string>
    <string name="detail">Detail</string>
    <string name="add">Add this to my order</string>
    <string name="share_btn">Share this</string>
    <string name="share">Share</string>
    <string name="contact">Contact Us</string>
    <string name="callus">Call us</string>
    <string name="alert">Failed to connect internet!</string>
    <string name="not_found">Not Found!</string>
    <string name="number_order">Number of order : </string>
    <string name="order">Order</string>
    <string name="my_order">Detail Oerder</string>
    <string name="total_order">Total Order :</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this order?</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="confirm">Confirmation</string>
    <string name="reservation">Reservation</string>
    <string name="your_name">Your Name</string>
    <string name="address">Your Address</string>
    <string name="city">Your City</string>
    <string name="province">Your Province</string>
    <string name="number_of_people">Number of people</string>
    <string name="date">Set Date</string>
    <string name="time">Set Time</string>
    <string name="phone_number">Phone Number</string>
    <string name="order_list">Order List</string>
    <string name="send_reservation">Send</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="sending_alert">Sending data. Please wait &#8230;</string>
    <string name="ok_alert">Your Order has been successfully sent.</string>
    <string name="failed_alert">Your Order has not been sent.</string>
    <string name="no_order">Your Cart is Empty, Please Order first.</string>
    <string name="check_order_later">Check if you want to order later</string>
    <string name="order_later">#Order later</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="no_order_menu">No order</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="add_comment">Comment (Optional)</string>
    <string name="menu_settings">Settings</string>
    <string name="app_info">App Info</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_home">Home</string>
    <string name="more">More Apps</string>
    <string name="rate">Rate Apps</string>
    <string-array name="main_menu_list">
        <item>List Menu</item>
        <item>Your Order</item>
        <item>Confirmation</item>
    </string-array>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_product">Product</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_info">Information</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Product</item>
        <item>Cart</item>
        <item>Checkout</item>
        <item>Profile</item>
        <item>Information</item>
        <item>About</item>
        <item>Share</item>
        <item>Contact</item>
        <item>Exit</item>
    </string-array>
    <string name="profile_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="profile_tab2">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab1">
		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab2">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
    <string name="information_tab3">
	    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
	</string>
</resources>